# tictactoe

./: .env  Cargo.toml
migrations/: 20240410162602_create_games_table.sql
src/: board.rs  client.rs  error.rs  game.rs  lib.rs  main.rs  mark.rs  server.rs
src/board/: board.rs  mod.rs  sqlx.rs
src/game/: game.rs  mod.rs  sqlx.rs  turn_error.rs
src/mark/: mark.rs  mod.rs  parse_error.rs  parse_mark_error.rs  sqlx.rs
src/state/: mod.rs  sqlx.rs  state.rs
