[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["macros", "json"] }
serde = "1.0.197"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "uuid"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
claims = "0.7.1"
