[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["macros", "json"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "uuid"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
claims = "0.7.1"
